# QoS_DATA

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  kaggle.json  pyproject.toml
.github/workflows/: pr-to-main.yml
app/: main.py
scripts/: collect_image_scraping.py  collect_kaggle_api.py  half_dataset.py  limit_samples_per_class.py  load_sources_to_db.py  main_etl.py
setup_data/mongo_init/: init-mongo.js
setup_data/postgres_init/: 01_schema.sql
tests/: tests_main.py
